frontend/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: gradio-poc
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
  name: gradio-poc
