frontend/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: gradio-poc
  annotations:
    app.access.url: <ACCESS_URL>
spec: 
  type: ClusterIP
  ports: 
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: gradio-poc
