frontend/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gradio-poc
  annotations:
    appgw.ingress.kubernetes.io/rewrite-target: $1
    appgw.ingress.kubernetes.io/backend-protocol: http
    appgw.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS'
    appgw.ingress.kubernetes.io/cookie-based-affinity: 'true'
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec: 
  ingressClassName: azure-application-gateway
  rules:
  - host: < ADD YOUR HOST HERE >
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gradio-poc
            port:
              number: 5000
  ###### bluegreen.staging.com will be internal testing web URL (Like for new app version fucntionality for QA testers) ######
  - host: < ADD YOUR STAGING HOST HERE >
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gradio-poc-preview
            port:
              number: 5000
  tls:
    - hosts:
        -  gradio-poc.dev-avaxialabs.com
        -  gradio-poc-preview.dev-avaxialabs.com
      secretName: gradio-poc-tls-secret
